5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1724_2524.log
== TEST (2019-05-14 11:19:10) 
-- CODE:
vai tomar no cu
-- ERROR:
File "XXXX", line 1
    vai tomar no cu
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:19:12) 
-- CODE:
vai tomar no cu
-- EXECUTION TIME:
0.164085
-- ERROR:
  File "/home/codebench/codes/1724/2524/main.py", line 1
    vai tomar no cu
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
